Custom and SQL Health Checks

--- a/HealthCheckSample.Web/HealthCheckSample.Web/HealthCheckSample.Web.csproj
+++ b/HealthCheckSample.Web/HealthCheckSample.Web/HealthCheckSample.Web.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>0335d18c-05de-4c74-9abe-6c6eee2268bf</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="6.0.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
 
 </Project>
