--- a/HealthCheckSample.Web/HealthCheckSample.Web/appsettings.json
+++ b/HealthCheckSample.Web/HealthCheckSample.Web/appsettings.json
@@ -5,9 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "ApiSettings": {
-    "BaseUrl": "https://localhost",
-    "HealthEndpoint":  "/health"
-  }
+    "BaseUrl": "https://localhost:7101",
+    "HealthEndpoint": "/health"
+  },
   "AllowedHosts": "*"
 }
