--- a/HealthCheckSample.Web/HealthCheckSample.Web/HealthCheckSample.Web.csproj
+++ b/HealthCheckSample.Web/HealthCheckSample.Web/HealthCheckSample.Web.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="6.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
