--- a/HealthCheckSample.Web/HealthCheckSample.Web/appsettings.json
+++ b/HealthCheckSample.Web/HealthCheckSample.Web/appsettings.json
@@ -6,11 +6,30 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "", //SQL Server Connection String
+    "CosmosDBConnection": "" //Cosmos DB Connection String
   },
+  "StorageAccountConnection": "", //Storage Account Connection String
+  "StorageContainerName": "",
+  "ServiceBusConnection": "", //Service Bus Connection String
+  "SBQueueName": "",
+  "AzureKeyVaultUri": "", //like https://abcxyz.vault.azure.net/
   "ApiSettings": {
     "BaseUrl": "https://localhost:7101",
     "HealthEndpoint": "/health"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "": null,
+  "HealthChecksUI": {
+    "Webhooks": [
+      {
+        "Name": "WebhookNotify",
+        "Uri": "https://d401e436-9aa0-42c5-9c93-888f3081432f.mock.pstmn.io/healthchecknotify",
+        "Payload": "{\"message\": \"[[LIVENESS]] has failed!. [[FAILURE]] Click **Learn More** to go to the Portal \", \"description\":\"Failure descriptions: [[DESCRIPTIONS]] \"}",
+        "RestoredPayload": ""
+      }
+    ],
+    "EvaluationTimeInSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
+  }
 }
